first gram check

--- a/Probabilité.ipynb
+++ b/Probabilité.ipynb
@@ -2,12 +2,43 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dd1a5f74-af77-4d3f-9fe9-6e88afad1944",
+   "metadata": {},
+   "source": [
+    "# Probabilité"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b47e980-0181-46dd-8980-014f8a6e9ebd",
+   "metadata": {},
+   "source": [
+    "## Quelques aspects techniques avant de commencer\n",
+    "\n",
+    "La section ci-dessous est très importante a faire tourner même si pratiquement elle ne fait que préparer les instruments dont nous allons nous servir plus tard dans le document.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "414eb358-2280-422e-a0c9-c8668d6f42cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# library utilisée pour faire le graphique\n",
+    "library(ggplot2)  \n",
+    "\n",
+    "# couleur pour le graphique\n",
+    "darkred  = \"#8B0000\"   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff0e104e-fde8-475c-89ff-e73fb2c8c626",
    "metadata": {},
    "source": [
-    "# Probabilité\n",
-    "\n",
-    "Une distribution de probabilité pourrait être considérée comme une construction formelle qui capture l'état de croyance d'un agent face à la réalisation d'un certain événement. Plus concrètement, une distribution de probabilité attribue des valeurs numériques (typiquement entre 0 et 1) à un certain nombre d'événements différents, c'est-à-dire à différents états dont le monde pourrait être. Ces valeurs numériques peuvent être interprétées comme le poids de la croyance que l'agent attribue à chaque événement : plus le nombre attribué à un événement est élevé, plus l'agent considère cet état du monde comme probable\n"
+    "\n"
    ]
   },
   {
@@ -15,8 +46,10 @@
    "id": "b8589a44-b305-42e8-8cff-ab0eaf9c741b",
    "metadata": {},
    "source": [
-    "#### Définir l'espace des probabilités\n",
+    "## Définir l'espace des probabilités\n",
     "\n",
+    "\n",
+    "Une distribution de probabilité pourrait être considérée comme une construction formelle qui capture l'état de croyance d'un agent face à la réalisation d'un certain événement. Plus concrètement, une distribution de probabilité attribue des valeurs numériques (typiquement entre 0 et 1) à un certain nombre d'événements différents, c'est-à-dire à différents états dont le monde pourrait être. Ces valeurs numériques peuvent être interprétées comme le poids de la croyance que l'agent attribue à chaque événement : plus le nombre attribué à un événement est élevé, plus l'agent considère cet état du monde comme probable\n",
     "\n",
     "Nous pouvons définir l'espace des probabilités comme un ensemble $(\\Omega, F, P)$\n",
     "\n",
@@ -113,15 +146,11 @@
     }
    ],
    "source": [
-    "nsamples  = 100                                      # numero de lancer\n",
+    "nsamples  = 100                                      # nombre de lancers\n",
     "\n",
-    "lancer   <- sample(c(\"1\", \"2\", \"3\", \"4\",\"5\", \"6\"), nsamples, replace = TRUE) # générateur de nombre pseudo aléatoire\n",
+    "lancer   <- sample(c(\"1\", \"2\", \"3\", \"4\",\"5\", \"6\"), nsamples, replace = TRUE) # générateur de nombres  pseudo aléatoires\n",
+    "prop_six <- cumsum(lancer == \"6\") / seq_along(lancer)  # calcul de la proportion de fois où le 6 apparaît\n",
     "\n",
-    "prop_six <- cumsum(lancer == \"6\") / seq_along(lancer)   # calcule de la proportion de fois ou il y a eu le nombre 6\n",
-    "\n",
-    "darkred  = \"#8B0000\"                                   # coleur pour le graphique\n",
-    "\n",
-    "library(ggplot2)                                       # library dont on se sert pour faire le graphique\n",
     "\n",
     "# graphique\n",
     "ggplot(data.frame(x = 1:nsamples, y = prop_six), aes(x, y)) +\n",
@@ -141,20 +170,17 @@
    "id": "9866e7d7-0be4-4b1c-be3d-4c5db2ec83bd",
    "metadata": {},
    "source": [
-    "Dans la figure à la fin de la séquence, même une très longue, la proportion de six est proche de 0.167 mais pas parfaitement égale à 0.167. Cet écart nous rappelle que même cette longue séquence n'est encore qu'un échantillon aléatoire fini, et qu'il n'y a aucune garantie que\n",
-    "que la fréquence relative d'un événement correspondra à la véritable probabilité sous-jacente de l'événement. C'est pourquoi nous disons que nous *approchons* la probabilité par la fréquence relative à long terme.\n",
+    "Dans la figure à la fin de la séquence, même une très longue, la proportion de six est proche de 0.167 mais pas parfaitement égale à 0.167. Cet écart nous rappelle que même cette longue séquence n'est encore qu'un échantillon aléatoire fini, et qu'il n'y a aucune garantie que la fréquence relative d'un événement correspondra à la véritable probabilité sous-jacente de l'événement. C'est pourquoi nous disons que nous *approchons* la probabilité par la fréquence relative à long terme.\n",
     "\n",
     "\n",
     "### Perspective basé sur la croyance incertaine\n",
     "\n",
-    "Dans la perspective basé sur la croyance incertaine, l'idée c'est de quantifier l'incertitude concernant notre croyance sur un certain état du monde, étant donnée certaines données. Si on reprend l'example du dé nous pouvons imaginer d'avoir la croyance que le dé n'est pas biaisé et que donc la probabilité d'obtenir le \"6\" c'est de 1/6 = 0.167. La probabilité de obtenir \"6\" peut être noté avec un parametre \"labeled\" avec la lettre greque theta : $\\theta =  0.167$, le niveau de croyance sur ce parametre peut être noté comme $p(\\theta)$. Nous pouvons imaginer un scenario dans lequel nous croyons fortement que le dé n'est pas biaisé et donc que la probabilté d'apparition du \"6\" est 1/6 -- ou par example $p(\\theta) = 0.99$, ou un autre scenario dans le quel nous croyons que le dé peut être biasé et donc nous avons plus d'incertitude -- par example $p(\\theta) = 0.5$ \n",
-    "Dans ce cas nous avons donc deux éléments: \"la probabilité\" et \"le degrée de croyance\"\n",
+    "Dans la perspective basée sur la croyance incertaine, l'idée est de quantifier l'incertitude concernant notre croyance sur un certain état du monde, étant donné certaines données. Si on reprend l'exemple du dé nous pouvons imaginer d'avoir la croyance que le dé n'est pas biaisé et que donc la probabilité d'obtenir le \"6\" c'est de 1/6 = 0.167. La probabilité de obtenir \"6\" peut être notée avec un parametre \"labeled\" avec la lettre grecque theta : $\\theta =  0.167$, le niveau de croyance sur ce parametre peut être noté comme $p(\\theta)$. Nous pouvons imaginer un scenario dans lequel nous croyons fortement que le dé n'est pas biaisé et donc que la probabilté d'apparition du \"6\" est 1/6 -- ou par example $p(\\theta) = 0.99$, ou un autre scenario dans le quel nous croyons que le dé peut être biasé et donc nous avons plus d'incertitude -- par example $p(\\theta) = 0.5$ \n",
+    "Dans ce cas nous avons donc deux éléments: \"la probabilité\" et \"le degré de croyance\"\n",
     "\n",
     "Ce qui distingue donc cette perspective c'est le fait de pouvoir exprimer le dégrée d'incertitude au tours d'un certain paramètre ($\\theta$). Cela peut être définit à travers des function mathématique qui définissent des curves qui quantifient le nivau d'uncertitude au tours d'un certain parametre. Ces functions mathématiques définissent des distributions de $p(\\theta)$, ou la *distribution à priori* de $\\theta$. Dans notre example cette distribution quantifie le degrée de notre croyance sur la probabilité d'obtenir un \"6\" dans la lancer de dé, avant d'observer les données.\n",
     "\n",
     "Concretement dans cette approche, le paremètre $\\theta$ est aussi traité comme une variable aléatoire avec sa propre distribution de probabilité $p(\\theta)$.\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -165,7 +191,7 @@
    "source": [
     "## Distributions de probabilité\n",
     "\n",
-    "Une distribution de probabilité est simplement une liste de tous les issues possibles et de leurs probabilités correspondantes, dans notre example du dé cela est relativement simple, comme il y 6 issues possibles (1, 2, 3, 4, 5 ou 6) qui sont equiprobables (1/6).\n",
+    "Une distribution de probabilité est simplement une liste de tous les issues possibles et de leurs probabilités correspondantes, dans notre example du dé cela est relativement simple, comme il y 6 issues possibles (1, 2, 3, 4, 5 ou 6) qui sont équiprobables (1/6).\n",
     "Nous pouvons déjà illustrer cette distribution de probabilité avec le graphique suivant:"
    ]
   },
@@ -192,18 +218,13 @@
     }
    ],
    "source": [
-    "# Créer le dataset avec la liste de tout les issues possibles et leur probabilité correspondantes \n",
+    "# Créer le dataset avec la liste de toutes les issues possibles et leurs probabilités correspondantes \n",
     "die_data <- data.frame(\n",
     "  outcome     = 1:6,\n",
     "  probability = rep(1/6, 6)\n",
     ")\n",
     "\n",
-    "darkred  = \"#8B0000\"   # coleur pour le graphique\n",
-    "\n",
-    "library(ggplot2)  # library dont on se sert pour faire le graphique\n",
-    "\n",
-    "\n",
-    "# Create the probability mass plot with adjusted y-axis scale\n",
+    "# Créer le graphique de masse de probabilité avec l'échelle de l'axe des y ajustée\n",
     "ggplot(die_data, aes(x = factor(outcome), y = probability)) +\n",
     "  geom_bar(stat = \"identity\", fill = darkred) +\n",
     "  labs(title = \"Fonction de masse de probabilité \",\n",
@@ -218,7 +239,7 @@
    "id": "bcaa4e82-ede4-4b81-bfa8-9c8db5fba757",
    "metadata": {},
    "source": [
-    "Pour d'autre types de résultats possibles comme dans la cas de variables aléatoires continues les choses peuvent se compliquer un peu plus, pour cela nous allons voir d'abord les distributions de probabilité discrete et en suite celles continues."
+    "Pour d'autre types de résultats possibles comme dans la cas de variables aléatoires continues les choses peuvent se compliquer un peu plus, pour cela nous allons voir d'abord les distributions de probabilité discrète et ensuite celles continues."
    ]
   },
   {
@@ -228,27 +249,27 @@
    "source": [
     "###  Probabilité discrete\n",
     "\n",
-    "Quand l'univers des possibilité est constitué par des issues discrètes, alors nous pouvons faire reference à la probabilité de chaque une des issues possible de manière distincte comme dans notre example du dé.\n",
+    "Quand l'univers des possibilités est constitué par des issues discrètes, alors nous pouvons faire référence à la probabilité de chacune des issues possible de manière distincte comme dans notre exemple du dé.\n",
     "\n",
-    "L'example du dé est facile a suivre, mais clairement dans la recherche on s'intéresse à des univers de possibilité très différentes. Par contre dans la recherche il y a un grand de cas ou on s'intéresse à des possibilité discrète comme par example, la survie à 5 ans après un certain type de traitement médical, ou encore la rechaute après un certain type de traitement psychothérapeutique.\n",
+    "L'exemple du dé est facile a suivre, mais clairement dans la recherche on s'intéresse à des univers de possibilités très différentes. Par contre, dans la recherche il y a un grand de cas ou on s'intéresse à des possibilités discrètes, comme par exemple, la survie à 5 ans après un certain type de traitement médical, ou encore la rechute après un certain type de traitement psychothérapeutique.\n",
     "\n",
-    "Prénons donc ce dernier example, imaginons une certaine clinique qui propose un nouveau traitement pour des personnes avec des troubles lié à l'usage de substance. Pour mésurer l'efficacité de ce traitement on mésure s'il y a eu une rechaute dans les 6 mois après le traitement. Nous avons donc une variable aléatoire qui code les issues d'univers qui n'admet que *deux issues possible*, souvent codé comme 1 ou 0 (succès/échec). Le but de la recherche c'est de estimer la probabilité, que nous allons appeller $\\theta$ d'une rechaute et nous allons la code comme 1 (rechaute) ou 0 (pas de rechaute).\n",
+    "Prénons donc ce dernier exemple, imaginons une certaine clinique qui propose un nouveau traitement pour des personnes avec des troubles lié à l'usage de substance. Pour mesurer l'efficacité de ce traitement on mesure s'il y a eu une rechaute dans les 6 mois après le traitement. Nous avons donc une variable aléatoire qui code les issues d'univers qui n'admet que *deux issues possibles*, souvent codé comme 1 ou 0 (succès/échec). Le but de la recherche c'est de estimer la probabilité, que nous allons appeller $\\theta$ d'une rechaute et nous allons la code comme 1 (rechute) ou 0 (pas de rechute).\n",
     "\n",
-    "Dans le cas ou nous avons une seule personne ($n = 1$) qui a suivit le traitement dans cette clinique et nous essayons de prédire la propabilité pour cette personne, notre variable aléatoire va suivre la *Loi de Bernoulli* : \n",
+    "Dans le cas ou nous avons une seule personne ($n = 1$) qui a suivit le traitement dans cette clinique et nous essayons de prédire la propabilité pour cette personne, notre variable aléatoire va suivre la *loi de Bernoulli* : \n",
     "\n",
     "$$X \\sim \\textit{Be}(\\theta) $$  \n",
     "\n",
     "ou $P(X = 1) = \\theta$ \\\n",
     "et $P(X = 0) = 1 - \\theta$ \n",
     "\n",
-    "hors si nous devons faire cette prediction pour plus que une personne, disons par example que il y a 10 personnes qui ont suivit le traitment dans cette clinique, pour chaqu'une de ces personnes nous nous allons coder 1 (si il y a eu une rechaute) ou 0 (si il y a pas eu une rechaute). Nous avons 10 observations indépendantes ($N= 10$), et ce que nous pouvons faire c'est conter le nombre de rechaute en faisons la somme des 10 personnes qui ont eu une rechaute.  Ici on est dans le cas d'une variable aléatoire qui somme $N$ experience de Bernoulli de paramètre $\\theta$. Dans ce cas, notre variable aléatoire suit la distribution de la *Loi Binomiale*:\n",
+    "Hors, si nous devons faire cette prédiction pour plus qu'une personne, disons par example que il y a 10 personnes qui ont suivit le traitment dans cette clinique, pour chacune de ces personnes nous nous allons coder 1 (si il y a eu une rechute) ou 0 (si il y a pas eu une rechute). Nous avons 10 observations indépendantes ($N= 10$), et ce que nous pouvons faire c'est compter le nombre de rechaute en faisons la somme des 10 personnes qui ont eu une rechute. Ici on est dans le cas d'une variable aléatoire qui somme $N$ experience de Bernoulli de paramètre $\\theta$. Dans ce cas, notre variable aléatoire suit la distribution de la *loi binomiale*:\n",
     "\n",
     "$$ X \\sim \\text{Binomial}(N, \\theta) $$\n",
     "\n",
     "\n",
-    "Pour mieux comprendre cette distribution, nous imaginer un example dans le quel nous avons 20 cliniques différentes qui ont chaqu'une traitée 10 personne avec la même thérapie. Nous allons simuler ce scenario in `R`, nous allons utiliser la function `rbinom` pour créer les données simulées, dans cette function `n` se refere aux nombre d'échantillons ou nombre d'observations, donc dans notre cas le nombre de cliniques  et `size` se refere à la taille de l'échantillons, donc aux nombre de personne par clinique qui ont suivit le traitment `prob` se refere à la probabilité que il y a une rechaute, c'est à dire notre paramètre $\\theta$.\n",
+    "Pour mieux comprendre cette distribution, nous imaginons un exemple dans lequel nous avons 20 cliniques différentes qui ont chacune traité 10 personnes avec la même thérapie. Nous allons simuler ce scénario en `R`, nous allons utiliser la fonction `rbinom` pour créer les données simulées, dans cette fonction `n` se réfère au nombre d'échantillons ou nombre d'observations, donc dans notre cas le nombre de cliniques  et `size` se réfère à la taille de l'échantillons, donc au nombre de personne par clinique qui ont suivit le traitement `prob` se réfère à la probabilité que il y ait une rechute, c'est à dire notre paramètre $\\theta$.\n",
     "\n",
-    "Ci dessous la commande R qui calcule combien de personne qui ont suivit le traitment ont une rechaute, si la probabilité est à 0.5, "
+    "Ci-dessous la commande R qui calcule combien de personnes qui ont suivit le traitment ont une rechute, si la probabilité est de 0.5:"
    ]
   },
   {
@@ -332,14 +353,14 @@
    "id": "82e03207-fcfb-4b7e-af00-33c0b854b8d2",
    "metadata": {},
    "source": [
-    "Chaque valeur indique le nombre de personne (sur 10) qui ont eu une rechaute dans chaqu'une des 20 cliniques sous une probabilité de 0.5. \n",
-    "Autrement dit, cela c'est le nombre de rechaute pour chaque une de 20 observations simulées générée par une variable aléatoire discrète $X$ avec un distribution de probabilité $p(x|\\theta)$ appelé distribution binomiale.\n",
+    "Chaque valeur indique le nombre de personne (sur 10) qui ont eu une rechute dans chaqu'une des 20 cliniques sous une probabilité de 0.5. \n",
+    "Autrement dit, cela c'est le nombre de rechute pour chacune de 20 observations simulées générées par une variable aléatoire discrète $X$ avec une distribution de probabilité $p(x|\\theta)$ appelée distribution binomiale.\n",
     "\n",
-    "Pour une variable alétoire discrète cette distribution s'appelle Function de Masse de Probabilité ou  **Probability Mass Function** souvent raccourci comme *PMF*\n",
+    "Pour une variable aléatoire discrète cette distribution s'appelle fonction de masse de probabilité ou  **Probability Mass Function** souvent raccourcie en *PMF*\n",
     "\n",
-    "Comme vu dnas l'example du dé, cette function définit la probabilité de chaqu'une des issues possibles. Dans le cas de notre traitement il y a 10 patients, donc les possibilité sont 11  (0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ou 10 personnes qui ont une rechaute).\n",
+    "Comme vu dans l'exemple du dé, cette fonction définit la probabilité de chacune des issues possibles. Dans le cas de notre traitement il y a 10 patients, donc les possibilités sont au nombre de 11  (0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ou 10 personnes qui ont une rechute).\n",
     "\n",
-    "Nous pouvons plus concrétement créer le graphique de cette function de probabilité de masse comme il suit, vous pouvez essayer de changer la valeur de `theta` pour voir les effects que cela a sur la distribution:\n",
+    "Nous pouvons plus concrètement créer le graphique de cette fonction de probabilité de masse comme suit, vous pouvez essayer de changer la valeur de `theta` pour voir les effets que cela a sur la distribution:\n",
     "\n"
    ]
   },
@@ -369,9 +390,6 @@
     "theta = 0.5\n",
     "\n",
     "data <- data.frame(x = 0:10, y = dbinom(0:10, size = 10, prob = theta))\n",
-    "\n",
-    "darkred  = \"#8B0000\"   # coleur pour le graphique\n",
-    "\n",
     "\n",
     "ggplot(data, aes(x, y)) +\n",
     "  geom_bar(stat = \"identity\", fill = darkred ) +\n",
