Check motivations notebook

--- a/motivations/motivations.ipynb
+++ b/motivations/motivations.ipynb
@@ -5,7 +5,7 @@
    "id": "6bf0ad18-6e34-4bd8-b554-60dd82cdcb05",
    "metadata": {},
    "source": [
-    "# Motivations et notitions de bases\n",
+    "# Motivations et notions de base\n",
     "\n"
    ]
   },
@@ -14,14 +14,14 @@
    "id": "662feef8-c361-472a-9de3-ad9c24beb718",
    "metadata": {},
    "source": [
-    "## Quelque aspect technique avant de commencer\n",
+    "## Quelques aspects techniques avant de commencer\n",
     "\n",
     "Il est très important d'exécuter la section ci-dessous, même si, d'un point de vue pratique, elle ne fait que préparer les instruments dont nous allons nous servir plus tard dans le document."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d4f91c89-c40c-4fbe-83c9-f27e5b3e6b26",
    "metadata": {
     "vscode": {
@@ -38,7 +38,7 @@
     "\n",
     "# chargement\n",
     "library(ggplot2) \n",
-    "library(scales) # chargement\n",
+    "library(scales)\n",
     "\n",
     "# couleur pour le graphique\n",
     "darkred  = \"#8B0000\"   \n"
@@ -53,14 +53,14 @@
     "\n",
     "Pour introduire les notions de base qui nous accompagneront pour le reste du cours, nous allons simuler un jeu de données qui nous permettra de modifier facilement les caractéristiques de l'étude exemple et d'en observer les effets.\n",
     "\n",
-    "Dans cette étude exemple, nous allons simuler un jeu de données dans lequel nous mesurons les niveaux d'anxiété état sur le questionnaire STAI-S et les niveaux socio-économiques de 120 participant-e-x-s. Le niveau socio-économique va de 1 à 20, avec 1 étant le niveau le plus bas et 20 le niveau le plus élevé. Le niveau d'anxiété état varie entre 20 et 80, avec des scores au-delà de 50 indiquant une souffrance importante.\n",
+    "Dans cette étude exemple, nous allons simuler un jeu de données dans lequel nous mesurons les niveaux d'anxiété état avec la sous-échelle état du State-Trait Anxiety Questionnaire (STAI-State) et les niveaux socio-économiques de 120 participant-e-x-s. Le niveau socio-économique va de 1 à 20, 1 étant le niveau le plus bas et 20 le niveau le plus élevé. Le niveau d'anxiété état varie entre 20 et 80, avec des scores au-delà de 50 indiquant une souffrance importante.\n",
     "\n",
     "Dans le jeu de données que nous allons simuler, nous allons aussi insérer une relation entre les scores d'anxiété et le niveau socio-économique.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "51521dd0-7373-4b91-aa31-9ece57e46a4d",
    "metadata": {
     "vscode": {
@@ -130,12 +130,12 @@
     }
    ],
    "source": [
-    "set.seed(1223) # cela c'est pour la reproductibiilité\n",
+    "set.seed(1223) # cela a pour but de rendre les analyses reproducibles\n",
     "\n",
-    "# Nombre de participants\n",
+    "# Nombre de participant-e-x-s\n",
     "n <- 120\n",
     "\n",
-    "# générer un statut socio-économique entre 1 et 20\n",
+    "# Générer un statut socio-économique entre 1 et 20\n",
     "socioecon <- rep(0:19, length.out = n)\n",
     "\n",
     "\n",
@@ -146,14 +146,14 @@
     "\n",
     "# Générer des scores d’anxiété influencés par le statut socio-économique\n",
     "anxiety_scores <- round(base_anxiety - socioecon * 2 + rnorm(n, 0, 5))\n",
-    "anxiety_scores <- anxiety_scores+25\n",
+    "anxiety_scores <- anxiety_scores + 25\n",
     "\n",
     "anxiety_scores <- pmax(pmin(anxiety_scores, 80), 20)\n",
     "\n",
     "\n",
     "# Création du dataset final\n",
     "simulated_data <- data.frame(\n",
-    "  sub_id = 1:n,                   # identifiant des participants\n",
+    "  sub_id = 1:n,                   # Identifiant des participant-e-x-s\n",
     "  socioecon = socioecon,          # Statut socio-économique\n",
     "  anxiety = anxiety_scores        # Score d'anxiété\n",
     ")\n",
@@ -170,18 +170,18 @@
    "source": [
     "## La distribution \n",
     "\n",
-    "Un concept très important est celui de la distribution des données. La distribution des données décrit comment les valeurs d'une variable sont réparties. Elle peut être représentée graphiquement par des histogrammes ou des courbes de densité. Cela sera un concept central pour tous les chapitres de cours sur les méthodes bayésiennes, mais il est aussi au cœur des statistiques fréquentistes.\n",
+    "Un concept très important est celui de la distribution des données. La distribution des données décrit comment les valeurs d'une variable sont réparties. Elle peut être représentée graphiquement par des histogrammes ou des courbes de densité. Cela sera un concept central pour tous les chapitres du cours sur les méthodes bayésiennes, mais il est aussi au cœur des statistiques fréquentistes.\n",
     "\n",
-    "Une manière très intuitive et pratique de s'approcher du concept de distribution est la représentation graphique en histogramme.\n",
+    "Une manière très intuitive et pratique d'appréhender le concept de distribution est la représentation graphique en histogramme.\n",
     "\n",
-    "Nous savons que l'échelle d'anxiété varie entre 20 et 80. Ce que nous allons faire dans la construction de l'histogramme, c'est de compter le nombre de participants qui ont répondu entre certains intervalles de valeurs, par exemple entre 20-25, 25-30, 35-40, ... 75-80. Ensuite, dans l'histogramme, nous traçons des barres pour chaque intervalle, la hauteur des barres indiquant combien de participants ont rapporté une valeur dans cet intervalle dans notre échantillon. Cela nous permet d'identifier quelles sont les valeurs qui apparaissent le plus souvent dans l'échantillon et quelles sont les valeurs plus rares.\n",
+    "Nous savons que l'échelle d'anxiété varie entre 20 et 80. Ce que nous allons faire dans la construction de l'histogramme, c'est compter le nombre de participant-e-x-s qui ont un score contenu dans certains intervalles de valeurs, par exemple dans l'intervalle 20-25, 25-30, 35-40, ... 75-80. Ensuite, dans l'histogramme, nous traçons des barres pour chaque intervalle, la hauteur des barres indiquant combien de participants ont rapporté une valeur contenue dans cet intervalle dans notre échantillon. Cela nous permet d'identifier quelles sont les valeurs qui apparaissent le plus souvent dans l'échantillon et quelles sont les valeurs plus rares.\n",
     "\n",
-    "L'unité de regroupement ici est de 5, mais nous pouvons la modifier selon nos besoins. Dans le code ci-dessous, vous pouvez modifier cette valeur et voir comment cela impacte la représentation de la distribution des données."
+    "L'unité de regroupement que nous avons choisie ici est de 5, mais nous pouvons la modifier selon nos besoins. Dans le code ci-dessous, vous pouvez modifier cette valeur et voir comment cela impacte la représentation de la distribution des données."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0bc894b3-9365-4bf8-997f-8ccaf3c97573",
    "metadata": {
     "vscode": {
@@ -225,34 +225,34 @@
    "source": [
     "## L'estimation des paramètres dans un modèle\n",
     "\n",
-    "Un autre concept très important est celui de paramètre (souvent noté comme $\\theta$). Ce concept nous accompagnera également pour la suite des chapitres de ce cours. Un paramètre dans un modèle statistique est une valeur numérique qui caractérise une relation entre les variables dans une population. Souvent, la formulation de nos hypothèses de recherche se formalise spécifiquement dans un de ces paramètres. Pour cela, vous verrez plus tard dans le cours très souvent la notation $P(D |\\theta$) qui se réfère à la vraisemblance, c'est-à-dire la probabilité d'observer certaines données étant donné notre hypothèse. Le processus d'estimation des paramètres est au cœur des statistiques fréquentistes et bayésiennes, même s'il se fait par des techniques différentes. Basé sur un modèle $M$ avec des paramètres $\\theta$, l'estimation des paramètres aborde la question de savoir quelles valeurs de $\\theta$ sont de bonnes estimations, étant donné certaines données $D$.\n",
+    "Un autre concept très important est celui de paramètre (souvent noté $\\theta$). Ce concept nous accompagnera également pour la suite des chapitres de ce cours. Un paramètre dans un modèle statistique est une valeur numérique qui caractérise une relation entre les variables dans une population. Souvent, nos hypothèses de recherche sont formalisées spécifiquement par un de ces paramètres. Pour cela, nous verrons plus tard dans le cours la notation $P(D | \\theta)$ qui se réfère à la vraisemblance, c'est-à-dire la probabilité d'observer certaines données étant donné notre hypothèse. Le processus d'estimation des paramètres est au cœur des statistiques fréquentistes et bayésiennes, même s'il se fait par des techniques différentes. L'estimation des paramètres aborde la question de savoir quelles valeurs de $\\theta$ sont de bonnes estimations, étant donné certaines données $D$, sur la base d'un modèle $M$ avec des paramètres $\\theta$.\n",
     "\n",
-    "Il existe beaucoup de modèles différents, mais en principe, vous êtes déjà très familier avec le concept des paramètres dans le modèle linéaire général (GLM). Pour illustrer concrètement cela, nous pouvons prendre notre exemple dans lequel nous souhaitons prédire le score d'anxiété (variable dépendante $y$) en fonction du statut socio-économique (variable indépendante $x$) et appliquer un GLM qui consiste en une simple régression linéaire.\n",
+    "Il existe beaucoup de modèles différents, mais en principe, vous êtes déjà très familier-e-x-s avec le concept de paramètres dans le modèle linéaire général (GLM). Pour illustrer concrètement cela, nous pouvons prendre notre exemple dans lequel nous souhaitons prédire le score d'anxiété (variable dépendante $y$) en fonction du statut socio-économique (variable indépendante $x$) et appliquer un GLM qui consiste en une simple régression linéaire.\n",
     "\n",
     "Le modèle de régression linéaire s'écrit comme suit :\n",
     "\n",
     "$$\\hat{y} = \\beta_0 + \\beta_1 x + \\epsilon, \\epsilon \\sim Normal(0, \\sigma)$$\n",
     "\n",
-    "ou:\n",
+    "où :\n",
     "\n",
     "* $\\hat{y}$ : variable prédite par le modèle, e.g., le score d'anxiété prédit par le modèle\n",
     "* $y$ : variable dépendante, e.g., c'est le score d'anxiété mesuré\n",
     "* $x$ : variable indépendante, e.g., le statut socio-économique qui varie entre 1 et 20\n",
     "* $\\beta_0$ : intercept (ordonnée à l'origine), c'est le paramètre qui représente la valeur moyenne de $\\hat{y}$ lorsque $x=0$.\n",
     "* $\\beta_1$ : coefficient de régression, c'est le paramètre qui représente le changement moyen de $\\hat{y}$ pour une unité de changement de $x$.\n",
-    "* $\\epsilon$ : terme d'erreur (résidus) qui représente la variation de $y$ non expliquée par $x$. Le modèle assume que les résidus suivent une distribution normale au tours de 0 avec certaine variance ($\\sigma$). Le symbole $\\sim$ signifie \"sont distribué selon\")\n",
+    "* $\\epsilon$ : terme d'erreur (résidus) qui représente la variation de $y$ non expliquée par $x$. Le modèle assume que les résidus suivent une distribution normale autour de 0 avec une certaine variance ($\\sigma$). Le symbole $\\sim$ signifie \"sont distribués selon\".\n",
     "\n",
-    "Donc dans le cas d'une régression linaire il y a trois paramètres qui doivent être estimées: $\\beta_0$, $\\beta_1$ et $\\sigma$.\n",
+    "Donc dans le cas d'une régression linéaire, trois paramètres doivent être estimés : $\\beta_0$, $\\beta_1$ et $\\sigma$.\n",
     "\n",
-    "Dans le langage de programmation R, nous pouvons utiliser la fonction `lm` qui implémente un régression linaire pour des études entre les sujets. Cette fonction va estimer les paramètres du modèle de régression en trouvant les paramètres qui meilleur décrivent les données (sous la contrainte du modèle de régression linéaire).\n",
+    "Dans le langage de programmation R, nous pouvons utiliser la fonction `lm` qui implémente un régression linaire pour des études inter-sujets. Cette fonction va estimer les paramètres du modèle de régression en trouvant les paramètres qui décrivent le mieux les données (sous la contrainte du modèle de régression linéaire).\n",
     "\n",
-    "Cela peut être fait comme il suit:\n",
+    "Cela peut être fait comme suit :\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "ac4f90bd-2ace-48e9-a631-3ad64af40a29",
    "metadata": {
     "vscode": {
@@ -261,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "glm_anxiety = lm(anxiety ~socioecon, data = simulated_data)\n"
+    "glm_anxiety = lm(anxiety ~ socioecon, data = simulated_data)\n"
    ]
   },
   {
@@ -269,7 +269,7 @@
    "id": "69c3c7d1-7998-49b9-bf8f-a9a41caabf0a",
    "metadata": {},
    "source": [
-    "Nous pouvons accéder au coefficients $\\beta_0$ (intercept) et $\\beta_1$ comme suit"
+    "Nous pouvons accéder aux coefficients $\\beta_0$ (intercept) et $\\beta_1$ comme suit :"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "id": "4715b090-a70d-4eef-a8f6-0b6afb5c27f6",
    "metadata": {},
    "source": [
-    "et nous pouvons acceder aux coefficent $\\sigma$ (variance des résidus) comme il suit:"
+    "Et nous pouvons accéder au coefficent $\\sigma$ (variance des résidus) comme suit :"
    ]
   },
   {
@@ -348,18 +348,18 @@
    "id": "d584943d-3ecb-4559-98c5-7e856359465f",
    "metadata": {},
    "source": [
-    "Le coefficient $\\beta_0$ (`Intercept`) représente la valeur prédite du score d'anxiété lorsque le statut socio-économique (socioecon) est égal à 0. Cela signifie que, dans le statut socio-économique le plus bas de notre échelle, le niveau d'anxiété prédit par notre modèle est d'environ 62.\n",
+    "Le coefficient $\\beta_0$ (`Intercept`) représente la valeur prédite du score d'anxiété lorsque le statut socio-économique (`socioecon`) est égal à 0. Cela signifie que, pour le statut socio-économique le plus bas de notre échelle, le niveau d'anxiété prédit par notre modèle est d'environ 62.\n",
     "\n",
-    "Le coefficient $\\beta_1$ (`socioecon`) représente la pente et indique de combien le score d’anxiété change pour chaque augmentation d'une unité du statut socio-économique. Dans notre cas, les augmentations de statut socio-économique prédisent une diminution du score d'anxiété d'environ 1.5.\n",
+    "Le coefficient $\\beta_1$ (`socioecon`) représente la pente et indique de combien le score d’anxiété change pour chaque augmentation d'une unité du statut socio-économique. Dans notre cas, chaque augmentation d'une unité du statut socio-économique prédit une diminution du score d'anxiété d'environ 1.5.\n",
     "\n",
-    "Le coefficient $\\sigma$ rreprésente la variance du terme d'erreur dans l'unité de l'échelle du score d'anxiété.\n",
+    "Le coefficient $\\sigma$ représente la variance du terme d'erreur dans l'unité de l'échelle du score d'anxiété.\n",
     "\n",
-    "Nous pouvons aussi représenter le modèle de regression avec un graphique comme suit:"
+    "Nous pouvons aussi représenter le modèle de regression avec un graphique comme suit :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "40ff0d2e-a07e-4a4f-81e1-c72cae88d718",
    "metadata": {
     "vscode": {
@@ -392,10 +392,10 @@
    ],
    "source": [
     "ggplot(simulated_data, aes(x = socioecon, y = anxiety)) +\n",
-    "  geom_point(color = \"black\", alpha = 0.6) +  # Points des participants\n",
+    "  geom_point(color = \"black\", alpha = 0.6) +  # Points correspondant aux données individuelles des participant-e-x-s\n",
     "  geom_smooth(method = \"lm\", color = darkred, se = TRUE, fill = darkred) +  # Régression\n",
     "  labs(title = \"\",\n",
-    "       x = \"Status socio-economique (x)\",\n",
+    "       x = \"Statut socio-economique (x)\",\n",
     "       y = \"Score STAI-State d'anxiété (y)\") +\n",
     "  theme_minimal()\n"
    ]
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "516bdcd9-a33c-43d5-98f0-e86cb8961ddc",
    "metadata": {
     "vscode": {
@@ -442,7 +442,7 @@
     "ggplot(simulated_data, aes(x = residuals )) +\n",
     "  geom_histogram(binwidth = bin_size, fill = darkred, color = darkred, alpha = 0.6) +\n",
     "  geom_density(aes(y = ..count.. * bin_size),  color = \"black\",  linewidth = 1) +  # Ajustement de l'échelle\n",
-    "  labs(title = \"Vérifications des postulats\",\n",
+    "  labs(title = \"Vérification des postulats\",\n",
     "       x = \"Residus du modèle\",\n",
     "       y = \"Count\") +\n",
     "  theme_minimal()\n",
@@ -454,15 +454,14 @@
    "id": "47573368-f94e-4c05-819a-4dd05bcf6dbf",
    "metadata": {},
    "source": [
-    "La méthode d'estimation des paramètresimplémentée par la fonction`lm` est celle des *Moindres Carrés Ordinaires* souvent abréviée comme OLS (*Ordinary Least Square*)\n",
-    "Cette méthode est relativement simple et consiste a minimiser a somme des carrés des écarts entre les valeurs observées $y$ et les valeurs prédites par le modèle $\\hat{y}$.\n",
-    "Comme ça nous interesse pas le sense de la distance on calcule la différence au carré $(y -\\hat{y})^2$. On fait ce calcule pour tout les mésures observée (i.e., tout les points dans le modèle de régression) et on calcue la sommation comme suit:\n",
+    "La méthode d'estimation des paramètres implémentée par la fonction `lm` est celle des *Moindres Carrés Ordinaires* (*Ordinary Least Square* ou *OLS*). Cette méthode est relativement simple et consiste à minimiser la somme des carrés des différences entre les valeurs observées $y$ et les valeurs prédites par le modèle $\\hat{y}$.\n",
+    "Comme le sens des différences ne nous intéresse pas, on utilise les carrés des différences $(y -\\hat{y})^2$. <span style=\"background-color: yellow;\">(A question could be why the squared and not the absolute value)</span> Ce calcul est fait pour chaque mesure observée (c'est-à-dire, chaque point dans le modèle de régression). La somme est ensuite calculée comme suit :\n",
     "\n",
     "$$SS = \\sum_{i=1}^{n} (y_i - \\hat{y}_i)^2 $$\n",
     "\n",
-    "Le modèle avec les paramètres les meilleures est celui qui permet de miminser le resultat de cette sommation.\n",
+    "Le modèle avec les meilleurs paramètres est celui qui permet de mimimiser le résultat de cette somme.\n",
     "\n",
-    "La méthode OLS utilisée ici pour estimer les paramètres ne peut pas être considérée directement comme une méthode de calcul de la vraisemblance, car elle ne repose pas explicitement sur un cadre probabiliste. Dans la suite du cours, nous verrons comment utiliser des concepts probabilistes tels que la vraisemblance pour estimer les paramètres et comment nous pouvons utiliser des méthodes probabilistes pour améliorer ces estimations en injectant des connaissances que nous avons a priori dans le processus d'estimation"
+    "La méthode OLS utilisée ici pour estimer les paramètres ne peut pas être considérée directement comme une méthode de calcul de la vraisemblance, car elle ne repose pas explicitement sur un cadre probabiliste. Dans la suite du cours, nous verrons comment utiliser des concepts probabilistes tels que la vraisemblance pour estimer les paramètres et comment nous pouvons utiliser des méthodes probabilistes pour améliorer ces estimations en injectant des connaissances que nous avons a priori dans le processus d'estimation."
    ]
   },
   {
